--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -61,5 +61,33 @@
   "onboarding_screen11_bullet4": "Time-saving shopping lists",
   "onboarding_screen11_pricing_highlight": "Highlight yearly plan (Save 40%), then monthly option.",
   "onboarding_screen11_guarantee": "Cancel anytime. 7-day money-back guarantee.",
-  "onboarding_screen11_cta": "Unlock My Plan"
+  "onboarding_screen11_cta": "Unlock My Plan",
+
+  "welcomeBack": "Welcome back",
+  "signInToContinueToNiblin": "Sign in to continue to Niblin",
+  "email": "Email",
+  "youExampleCom": "you@example.com",
+  "emailIsRequired": "Email is required",
+  "enterAValidEmail": "Enter a valid email",
+  "password": "Password",
+  "passwordIsRequired": "Password is required",
+  "minimum6Characters": "Minimum 6 characters",
+  "signIn": "SIGN IN",
+  "forgotPassword": "FORGOT PASSWORD",
+  "continueWithGoogle": "CONTINUE WITH GOOGLE",
+  "continueWithApple": "CONTINUE WITH APPLE",
+  "bySigningInYouAgreeToOur": "By signing in you agree to our ",
+  "terms": "Terms",
+  "and": " and ",
+  "privacyPolicy": "Privacy Policy",
+
+  "passwordResetEmailSent": "Password reset email sent",
+  "forgotPassword": "Forgot Password",
+  "enterYourEmailToReceiveAResetLink": "Enter your email to receive a reset link",
+  "sendResetLink": "Send reset link",
+
+  "retry": "Retry",
+  "noUserIsCurrentlyLoggedIn": "No User Is Currently Logged In",
+  "failedToDeleteAccount": "Failed to Delete Account",
+  "oopsSomethingWentWrongPleaseTryAgain": "Oops! Something went wrong. Please try again."
 }
