--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -22,11 +22,15 @@
   "onboarding_screen5_field_name": "Baby’s name",
   "onboarding_screen5_field_dob": "Date of birth",
   "onboarding_screen5_field_feeding_style": "Feeding style (Purees, BLW, Mixed)",
-  "onboarding_screen5_cta": "Continue",
+  "nameRequired": "Name required",
+  "purees": "Purees",
+  "blw": "BLW",
+  "mixed": "Mixed",
+  "pleaseSelectAFeedingStyle": "Please select a feeding style",
+  "selectDateOfBirth": "Select date of birth",
 
   "onboarding_screen6_headline": "90% of brain development happens by age 5.",
   "onboarding_screen6_subtext": "We tailor recipes to your baby’s stage to fuel growth and learning.",
-  "onboarding_screen6_cta": "Next",
 
   "onboarding_screen7_headline": "Any allergies or preferences we should know?",
   "onboarding_screen7_option_dairy": "Dairy",
@@ -34,11 +38,9 @@
   "onboarding_screen7_option_peanuts": "Peanuts",
   "onboarding_screen7_option_wheat": "Wheat",
   "onboarding_screen7_option_other": "Other (multi-select)",
-  "onboarding_screen7_cta": "Next",
 
   "onboarding_screen8_headline": "Introducing variety early can prevent picky eating later.",
   "onboarding_screen8_subtext": "We guide you on the right foods, at the right time.",
-  "onboarding_screen8_cta": "Continue",
 
   "onboarding_screen9_headline": "What matters most to you?",
   "onboarding_screen9_option_growth": "Healthy growth",
@@ -52,7 +54,6 @@
   "onboarding_screen10_recipe1": "Banana Oat Porridge",
   "onboarding_screen10_recipe2": "Sweet Potato Fingers",
   "onboarding_screen10_recipe3": "Apple Cinnamon Mash",
-  "onboarding_screen10_cta": "Unlock My Plan",
 
   "onboarding_screen11_headline": "Give your baby the best start — without the stress.",
   "onboarding_screen11_bullet1": "Expert-vetted recipes for every stage",
@@ -61,7 +62,6 @@
   "onboarding_screen11_bullet4": "Time-saving shopping lists",
   "onboarding_screen11_pricing_highlight": "Highlight yearly plan (Save 40%), then monthly option.",
   "onboarding_screen11_guarantee": "Cancel anytime. 7-day money-back guarantee.",
-  "onboarding_screen11_cta": "Unlock My Plan",
 
   "welcomeBack": "Welcome back",
   "signInToContinueToNiblin": "Sign in to continue to Niblin",
@@ -87,6 +87,13 @@
   "sendResetLink": "Send reset link",
 
   "retry": "Retry",
+  "cancel": "Cancel",
+  "continueButton": "Continue",
+  "next": "Next",
+  "done": "Done",
+
+  "unlockMyPlan": "Unlock My Plan",
+
   "noUserIsCurrentlyLoggedIn": "No User Is Currently Logged In",
   "failedToDeleteAccount": "Failed to Delete Account",
   "oopsSomethingWentWrongPleaseTryAgain": "Oops! Something went wrong. Please try again."
