--- a/lib/l10n/app_sq.arb
+++ b/lib/l10n/app_sq.arb
@@ -206,5 +206,43 @@
   "janeDoe": "Emri Mbiemri",
   "nameIsRequired": "Emri është i nevojshëm",
   "saveBabysPlanAndGetStarted": "Ruaj planin e {babyName} & Fillo",
-  "saveMyPlanAndGetStarted": "Ruaj planin tim & Fillo"
+  "saveMyPlanAndGetStarted": "Ruaj planin tim & Fillo",
+
+  "home": "Kreu",
+  "explore": "Eksploro",
+  "plan": "Plani",
+  "tracker": "Gjurmo",
+
+  "goodMorning": "Mirëmëngjes",
+  "goodAfternoon": "Mirëdita",
+  "timeForDinner": "Koha për darkë",
+  "goodEvening": "Mirëmbrëma",
+  "monthOld": "muajsh",
+  "monthsOld": "muajsh",
+  "settings": "Cilësimet",
+  "todaysMealPlan": "Plani i Ushqimeve për Sot 🍲",
+  "minTotal": "min në total",
+  "viewRecipe": "Shiko Recetën",
+  "logMeal": "Regjistro Ushqimin",
+  "swap": "Ndërro",
+  "noMealsScheduledForToday": "Nuk ka ushqime të planifikuara për sot",
+  "tapHereToExploreRecipes": "Shtyp këtu për të eksploruar recetat!",
+  "exploreRecipes": "Eksploro Recetat",
+  "thisWeeksJourney": "Këtë Javë",
+  "readyToExploreNewFlavorsThisWeek": "Gati për të eksploruar shije të reja këtë javë!",
+  "youveIntroducedOneNewFoodThisWeek": "Keni provuar 1 ushqim të ri këtë javë! Fillim i mbarë.",
+  "youveIntroducedNewFoodsThisWeek": "Keni provuar {foodCount} ushqime të reja këtë javë! Punë e shkëlqyer.",
+  "mealsLogged": "Ushqime të regjistruara",
+  "newFoods": "Ushqime të reja",
+  "forThisStage": "Për Këtë Fazë",
+  "tip": "Këshillë",
+  "article": "Artikull",
+  "reminder": "Kujtesë",
+  "milestone": "Arritje",
+  "safety": "Siguri",
+  "ages": "Mosha",
+  "months": "muajs",
+  "tiredOfDailyPlanning": "U lodhe duke planifikuar çdo ditë?",
+  "unlockYourFullWeeklyMealPlan": "Planifiko të gjithë javën tani.",
+  "goPremium": "Kalo në Premium"
 }
